--- a/services/inference/pyproject.toml
+++ b/services/inference/pyproject.toml
@@ -61,6 +61,12 @@ optional = true
 pytest = "*"
 locust = "*"
 
+# ***********Extras***********
+[tool.poetry.group.moirai]
+optional = true
+[tool.poetry.group.moirai.dependencies]
+uni2ts = { git = "https://github.com/SalesforceAIResearch/uni2ts.git" }
+
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
